--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
         font: bold 30px Verdana, Helvetica, Arial, sans-serif;
         text-anchor: middle;
         dominant-baseline: middle;
+        cursor: default;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 
     .board .row {
