--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </svg>
         <svg v-else-if="!covered()"
              class="neighCount">
-            <text x="50%" y="50%">{{countNeighMines() || ""}}</text>
+            <!-- text x="50%" y="50%">{{countNeighMines() || ""}}</text -->
         </svg>
 
         <svg v-if="covered() && flagged()"
