--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" >
   <meta charset="utf-8"/>
   <head>
-    <title>MEH</title>
+    <title>Deterministic Minesweeper</title>
   </head>
   <style>
+    body {
+        margin: 0;
+    }
     div.row {
         display: table;
         line-height: 0px;
@@ -14,8 +17,8 @@
     div.field {
         display: table-cell;
         position: relative;
-        width: 9vmin;
-        height: 9vmin;
+        width: 10vmin;
+        height: 10vmin;
         cursor: default;
     }
     div.field svg {
@@ -73,7 +76,7 @@
 
   <script type="text/x-template" id="appField">
     <div class="field"
-         v-on:click.prevent="toggle"
+         v-on:click.prevent="open"
          v-on:contextmenu.prevent="flag">
         <svg v-if="covered()"
              class="covered"
@@ -97,7 +100,7 @@
         <svg v-else-if="!covered()"
              class="neighCount"
              viewBox="0 0 32 32">
-            <text x="50%" y="50%">{{countNeighMines() || ""}}</text>
+            <text x="16" y="16">{{countNeighMines() || ""}}</text>
         </svg>
 
         <svg v-if="covered() && flagged()"
