--- a/staging/index.html
+++ b/staging/index.html
@@ -3,7 +3,7 @@
     "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" >
   <meta charset="utf-8"/>
-  <!-- meta name="viewport" content="width=device-width, initial-scale=1"/ -->
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <head>
     <title>Deterministic Minesweeper</title>
   </head>
