--- a/staging/index.html
+++ b/staging/index.html
@@ -3,7 +3,7 @@
     "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" >
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <!-- meta name="viewport" content="width=device-width, initial-scale=1"/ -->
   <head>
     <title>Deterministic Minesweeper</title>
   </head>
@@ -13,14 +13,17 @@
     }
     div.app {
         text-align: center;
+        touch-action: manipulation;
     }
     div.board {
         display: inline-block;
         text-align: left;
+        touch-action: manipulation;
     }
     div.row {
         display: table;
         line-height: 0px;
+        touch-action: manipulation;
     }
     div.field {
         display: table-cell;
@@ -30,11 +33,13 @@
         width: 10vmin;
         height: 10vmin;
         cursor: default;
+        touch-action: manipulation;
     }
     div.field svg {
         position: absolute;
         width: 100%;
         height: 100%;
+        touch-action: manipulation;
     }
 
     div.field svg.covered .light {
