--- a/staging/index.html
+++ b/staging/index.html
@@ -10,6 +10,7 @@
   <style>
     body {
         margin: 0;
+        touch-action: manipulation;
     }
     div.app {
         text-align: center;
@@ -81,6 +82,7 @@
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
+        touch-action: manipulation;
     }
   </style>
 
