--- a/staging/index.html
+++ b/staging/index.html
@@ -3,44 +3,36 @@
     "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" >
   <meta charset="utf-8"/>
-  <!-- meta name="viewport" content="width=device-width, initial-scale=1"/ -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <head>
     <title>Deterministic Minesweeper</title>
   </head>
   <style>
     body {
         margin: 0;
-        touch-action: manipulation;
     }
     div.app {
         text-align: center;
-        touch-action: manipulation;
     }
     div.board {
         display: inline-block;
         text-align: left;
-        touch-action: manipulation;
     }
     div.row {
         display: table;
         line-height: 0px;
-        touch-action: manipulation;
     }
     div.field {
         display: table-cell;
         position: relative;
-        margin: 0;
-        padding: 0;
         width: 10vmin;
         height: 10vmin;
         cursor: default;
-        touch-action: manipulation;
     }
     div.field svg {
         position: absolute;
         width: 100%;
         height: 100%;
-        touch-action: manipulation;
     }
 
     div.field svg.covered .light {
@@ -63,6 +55,16 @@
         stroke-dasharray: 2,2;
     }
 
+    div.field svg.openMistake .light {
+        fill: #aba7ad;
+    }
+    div.field svg.openMistake .border {
+        fill: none;
+        stroke: red;
+        stroke-width: 4;
+        stroke-dasharray: 2,2;
+    }
+
     div.field svg.bomb circle {
         stroke: none;
         fill: black;
@@ -76,13 +78,18 @@
         dominant-baseline: middle;
     }
 
+    div.field svg.cross path {
+        fill:red;
+        stroke:black;
+        stroke-width:1;
+    }
+
     .unselectable {
         cursor: default;
         -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
-        touch-action: manipulation;
     }
   </style>
 
@@ -97,6 +104,12 @@
             <path d="M 32,32 H 0 L 32,0 Z" class="dark" />
             <rect y="2" x="2" height="28" width="28" class="medium" />
         </svg>
+        <svg v-else-if="crossed() || (flagged() && !hasMine())"
+             class="openMistake"
+             viewBox="0 0 32 32">
+            <rect y="0" x="0" height="32" width="32" class="light" />
+            <rect y="0.25" x="0.25" height="31.5" width="31.5" class="border" />
+        </svg>
         <svg v-else
              class="open"
              viewBox="0 0 32 32">
@@ -104,18 +117,18 @@
             <rect y="0.25" x="0.25" height="31.5" width="31.5" class="border" />
         </svg>
 
-        <svg v-if="!covered() && hasMine()"
+        <svg v-if="!covered() && hasMine() && !flagged()"
              class="bomb"
              viewBox="0 0 32 32">
             <circle cx="16" cy="16" r="6" />
         </svg>
-        <svg v-else-if="!covered()"
+        <svg v-else-if="!covered() && !flagged()"
              class="neighCount"
              viewBox="0 0 32 32">
             <text x="16" y="16">{{countNeighMines() || ""}}</text>
         </svg>
 
-        <svg v-if="covered() && flagged()"
+        <svg v-if="flagged()"
              viewBox="0 0 32 32">
           <path style="stroke: black;
                        stroke-width: 2"
